// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CopyButton /> rendering should match snapshot (outline) 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: 1px solid #DBDBDB;
  border-radius: 4px;
  padding: 8px 16px;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

<span
    class="c0"
    role="button"
  >
    description 
    <img
      alt="copy"
      src="[object Object]"
    />
  </span>
</DocumentFragment>
`;

exports[`<CopyButton /> rendering should match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.8rem;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #151515;
}

<span
    class="c0"
    role="button"
  >
    description 
    <img
      alt="copy"
      src="[object Object]"
    />
  </span>
</DocumentFragment>
`;
